--- a/css/styles.css
+++ b/css/styles.css
@@ -46,9 +46,22 @@ label {
     height: 80%;
 }
 
-h1 h2 h3 h4 h5 h6 {
-    font-family: 'Montserrat', sans-serif; 
+
+
+
+.offcanvasButton {
+    width: 135px;
+    height: 45px;
+    text-align: end;
+    padding-right: 23px;
+     
+
+    
+    
 }
+
+
+    
 
 
 /*FONT'S STYLES*/
@@ -65,6 +78,11 @@ h1 {
 
 p {
     font-size: 14px;
+    font-family: 'Mulish', sans-serif;
+}
+
+li {
+    font-family: 'Mulish', sans-serif;
 }
 
 /*OFF CANVAS STILES*/
