--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,13 @@ label {
     width: 135px;
     height: 45px;
     text-align: end;
-    padding-right: 23px;
-     
-
-    
-    
+    padding-right: 23px;    
 }
 
+.restar {
+    
+    border: solid black;
+}
 
     
 
